# pipes

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
samples/: 01.super-basic.txt  02.quite-basic.txt  03.more-complex.txt  04.a-bit-more-complex.txt
src/pipes_game/: __main__.py  display.py  drawer.py  gobject.py  grid.py  parser.py  solver.py
tests/: test_ci.py  test_drawer.py  test_grid.py  test_parser.py
